RESOLVED FIXED115274
[WK2] testRunner.setPrivateBrowsingEnabled doesn't work with NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=115274
Summary [WK2] testRunner.setPrivateBrowsingEnabled doesn't work with NetworkProcess
Alexey Proskuryakov
Reported 2013-04-26 13:22:59 PDT
InjectedBundle::setPrivateBrowsingEnabled only enables private browsing in WebProcess, not in NetworkProcess. One complication here is that we need to go through UI process - letting WebProcess directly change private browsing settings in NetworkProcess would be undesirable for security.
Attachments
Patch (6.55 KB, patch)
2016-03-03 11:30 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-03-03 11:30:17 PST
WebKit Commit Bot
Comment 2 2016-03-03 13:25:01 PST
Comment on attachment 272766 [details] Patch Clearing flags on attachment: 272766 Committed r197516: <http://trac.webkit.org/changeset/197516>
WebKit Commit Bot
Comment 3 2016-03-03 13:25:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.