Source/WebKit2/NetworkProcess/NetworkConnectionToWebProcess.h
@@ -93,6 +93,7 @@ private:
     void registerBlobURLForSlice(const WebCore::URL&, const WebCore::URL& srcURL, int64_t start, int64_t end);
     void blobSize(const WebCore::URL&, uint64_t& resultSize);
     void unregisterBlobURL(const WebCore::URL&);
+    void ensureLegacyPrivateBrowsingSession();
 
     RefPtr<IPC::Connection> m_connection;
 
