Source/WebKit2/NetworkProcess/NetworkProcess.h
@@ -108,6 +108,8 @@ public:
     
     void prefetchDNS(const String&);
 
+    void ensurePrivateBrowsingSession(WebCore::SessionID);
+
 private:
     NetworkProcess();
     ~NetworkProcess();
@@ -149,7 +151,6 @@ private:
     void didReceiveSyncNetworkProcessMessage(IPC::Connection&, IPC::MessageDecoder&, std::unique_ptr<IPC::MessageEncoder>&);
     void initializeNetworkProcess(const NetworkProcessCreationParameters&);
     void createNetworkConnectionToWebProcess();
-    void ensurePrivateBrowsingSession(WebCore::SessionID);
     void destroyPrivateBrowsingSession(WebCore::SessionID);
 
     void fetchWebsiteData(WebCore::SessionID, OptionSet<WebsiteDataType>, OptionSet<WebsiteDataFetchOption>, uint64_t callbackID);
